--- a/actividad4.html
+++ b/actividad4.html
@@ -10,9 +10,8 @@
   </style>
 </head>
 <body>
-  <h1> MiCatálogo</h1>
+  <h1>🛡 MiCatálogoSeguro (Simulación Actividad 4)</h1>
 
-  <!--  1. Validación en cliente -->
   <h2>Login</h2>
   <form id="login-form">
     <label>Usuario: <input type="text" id="usuario" required></label><br>
@@ -21,29 +20,25 @@
   </form>
   <p id="login-msg"></p>
 
-  <!--  2. Resultado del token (simulado) -->
   <h3>Token generado:</h3>
   <pre id="token"></pre>
 
-  <!-- 3. API REST simulada -->
   <h2> Productos disponibles</h2>
-  <button onclick="cargarProductos()">Ver productos</button>
+  <button id="ver-productos">Ver productos</button>
   <ul id="productos"></ul>
 
-  <!--  4. API pública (clima) -->
-  <h2>☁️ Clima en México</h2>
-  <button onclick="obtenerClima()">Consultar clima</button>
+  <h2> Clima en México</h2>
+  <button id="btn-clima">Consultar clima</button>
   <p id="clima"></p>
 
   <script>
-    //  Validación y autenticación (simulada)
     document.getElementById('login-form').addEventListener('submit', e => {
       e.preventDefault();
       const usuario = document.getElementById('usuario').value;
       const clave = document.getElementById('clave').value;
 
       if (usuario === 'admin' && clave === '12345678') {
-        const token = btoa(`${usuario}:${clave}`); // Simulación de token
+        const token = btoa(`${usuario}:${clave}`);
         document.getElementById('token').textContent = token;
         document.getElementById('login-msg').textContent = "Login exitoso.";
       } else {
@@ -51,8 +46,7 @@
       }
     });
 
-    //  API REST simulada
-    function cargarProductos() {
+    document.getElementById('ver-productos').addEventListener('click', () => {
       const productos = [
         { id: 1, nombre: 'Guitarra eléctrica', precio: 5000 },
         { id: 2, nombre: 'Bajo activo', precio: 4500 }
@@ -64,11 +58,10 @@
         li.textContent = `${p.nombre} - $${p.precio}`;
         ul.appendChild(li);
       });
-    }
+    });
 
-    //  API pública real - OpenWeatherMap
-    function obtenerClima() {
-      fetch('https://api.openweathermap.org/data/2.5/weather?q=Mexico&appid=29512d4de5cd49bf8c0cf56f31caa7de&units=metric&lang=es')
+    document.getElementById('btn-clima').addEventListener('click', () => {
+      fetch('https://api.openweathermap.org/data/2.5/weather?q=Mexico&appid=TU_API_KEY&units=metric&lang=es')
         .then(res => res.json())
         .then(data => {
           document.getElementById('clima').textContent =
@@ -77,7 +70,7 @@
         .catch(err => {
           document.getElementById('clima').textContent = "Error al obtener clima.";
         });
-    }
+    });
   </script>
 </body>
 </html>
